Set the DR build number to indicate the DrMem version
The DR build number for a DrMem package is 0, which results in messages
like this on a DR crash:

  version 5.0.16674, custom build

We replace "custom build" with "build NNNN" where NNNN is computed from
100*major + 10*minor + patchlevel.  This should make it easier to correlate
a DR crash to the corresponding DrMem package.

Review-URL: https://codereview.appspot.com/260950043

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -195,6 +195,14 @@ message(STATUS "Dr. Memory version number: ${TOOL_VERSION_NUMBER}")
 
 # Avoid "BUILD_NUMBER" name since conflics w/ DR's var
 set(TOOL_BUILD_NUMBER "1" CACHE STRING "Build number (must be <64K)")
+# However, we do want to set it to avoid "custom build" in messages
+# from DR.  To make it easy to correlate, we set it to a formula computed
+# from the DrMem ver.
+string(REPLACE "." ";" ver_list ${TOOL_VERSION_NUMBER})
+list(GET ver_list 0 TOOL_VERSION_MAJOR)
+list(GET ver_list 1 TOOL_VERSION_MINOR)
+math(EXPR BUILD_NUMBER
+  "${TOOL_VERSION_MAJOR}*100 + ${TOOL_VERSION_MINOR}*10 + ${VERSION_NUMBER_PATCHLEVEL}")
 
 string(REGEX REPLACE "\\." "," TOOL_VERSION_COMMAS "${TOOL_VERSION_NUMBER}")
 
