i#1663: support for CMake 3
Adds support for CMake 3, mostly by workarounds.

It turns out that rather than having to solve i#1652 and use ALIAS targets
plus --build-and-test, we can just drop the drmf_ prefix for internal use
and everything seems fine.

Requests the old behavior for CMP0024 (i#1652 covers better fix) and
CMP0026 (i#1651 covers better fix).  Uses a centralized policies.cmake file
for this.

Fixes configure_file() COPY_ONLY => COPYONLY.

Fixes samples code that adds a test even if TOOL_BUILD_TESTS is off.

Fixes a build error in drfuzz_app_segfault.c

Re-orders drsyms and drsyscall links for drstracelib to fix libcmt tolower
Windows link errors in release build.

Fixes #1663

Review-URL: https://codereview.appspot.com/260970043

--- a/drfuzz/CMakeLists.txt
+++ b/drfuzz/CMakeLists.txt
@@ -71,10 +71,8 @@ macro(export_drfuzz_target target drwrap drmgr)
   # We need to clear the dependents that come from DR to avoid the prefix
   # from affecting them too.
   set_target_properties(${target} PROPERTIES LINK_INTERFACE_LIBRARIES "")
-  # We use a prefix primarily to make it easy to test the imported targets,
-  # and to give a better "bundled extensions" feel.
-  export_target(${target} NAMESPACE drmf_)
-  # Now put in our imports w/o the namespace on them
+  export_target(${target})
+  # Now put in our imports (w/o any namespace on them)
   set_target_properties(${target} PROPERTIES
     LINK_INTERFACE_LIBRARIES "dynamorio;${drwrap};${drmgr};drsyms;drcontainers")
   install(TARGETS ${target} EXPORT ${exported_targets_name}
