--- a/drsyscall/CMakeLists.txt
+++ b/drsyscall/CMakeLists.txt
@@ -1,5 +1,5 @@
 # **********************************************************
-# Copyright (c) 2012-2014 Google, Inc.  All rights reserved.
+# Copyright (c) 2012-2015 Google, Inc.  All rights reserved.
 # **********************************************************
 
 # Dr. Memory: the memory debugger
@@ -106,10 +106,8 @@ macro(export_drsyscall_target target drmgr)
   # We need to clear the dependents that come from DR to avoid the prefix
   # from affecting them too.
   set_target_properties(${target} PROPERTIES LINK_INTERFACE_LIBRARIES "")
-  # We use a prefix primarily to make it easy to test the imported targets,
-  # and to give a better "bundled extensions" feel.
-  export_target(${target} NAMESPACE drmf_)
-  # Now put in our imports w/o the namespace on them
+  export_target(${target})
+  # Now put in our imports (w/o any namespace)
   set_target_properties(${target} PROPERTIES
     LINK_INTERFACE_LIBRARIES "dynamorio;${drmgr};drcontainers")
   install(TARGETS ${target} EXPORT ${exported_targets_name}
