i#1620 WIX integration: switch to a patch file
Switches from an absolute template file to a patch file.  This allows
us to seamlessly pick up new features as CPack WIX support improves.

Review-URL: https://codereview.appspot.com/265770043

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2001,9 +2001,7 @@ else (UNIX)
     # reinstalling the same version. See i#1620.
     set(CPACK_WIX_UPGRADE_GUID 1A8D7CEE-2ABA-4462-B0D6-86F26715128E)
     set(CPACK_WIX_PRODUCT_GUID 67675AD6-1FB0-4DE1-9ECF-84997515025E)
-    # We may want to update this with new features: currently targeting
-    # CMake/CPack 3.3.
-    set(CPACK_WIX_TEMPLATE "${CMAKE_CURRENT_SOURCE_DIR}/make/WIX.template.in")
+    set(CPACK_WIX_PATCH_FILE "${CMAKE_CURRENT_SOURCE_DIR}/make/WIX.patches.in")
     # This should show up in Add/Remove Programs:
     set(CPACK_WIX_PROPERTY_ARPURLINFOABOUT "http://drmemory.org")
   else ()
