i#1620 WIX integration: add desktop menu entries
Adds the explorer, web page, and local docs links to WIX that we had
for NSIS.  This requires the WiXUtilExtension extension.

Review-URL: https://codereview.appspot.com/262160043

--- a/make/WIX.patches.in
+++ b/make/WIX.patches.in
@@ -18,4 +18,8 @@
         </InstallExecuteSequence>
   </CPackWiXFragment>
 
+  <CPackWiXFragment Id="#PRODUCTFEATURE">
+        <ComponentRef Id="CM_SHORTCUT_EXTRA"/>
+  </CPackWiXFragment>
+
 </CPackWiXPatch>
