i#1620 WIX integration: add DrMem to user PATH
The WIX installer now unconditionally (i#1761 covers adding checkboxes)
adds Dr. Memory to the user's PATH.  This *should* be auto-removed on
uninstall but that is not working: i#1762 covers fixing that.

This CL updates the docs to reflect the new automatic PATH editing.

The WIX installer now has enough of the features of the NSIS installer that
WIX support is declared complete.

Fixes #1620

Review-URL: https://codereview.appspot.com/265780043

--- a/make/WIX.extra.in
+++ b/make/WIX.extra.in
@@ -17,5 +17,19 @@
                 Target="http://drmemory.org/"/>
             </Component>
         </DirectoryRef>
+
+        <!-- i#1761: ideally we'd have a dialog where the user picks
+             whether to do this and whether system or user, but for
+             now we always do it for user (the zip file can be used
+             instead of installer if this is undesirable).
+        -->
+        <ComponentGroup Id="CG_ADD_TO_PATH" Directory="INSTALL_ROOT">
+          <Component Id="CM_ADD_TO_PATH" Guid="208034b8-7cc5-4718-9b99-ac50201c3f90"
+              KeyPath="yes">
+            <!-- XXX i#1762: not being removed on uninstall!  Why? -->
+            <Environment Id="ENV_PATH" Name="PATH" Value="[$CM_CP_bin.drmemory.exe]"
+                Permanent="no" Part="last" Action="set" System="no" />
+          </Component>
+        </ComponentGroup>
     </Fragment>
 </Wix>
