--- a/make/WIX.patches.in
+++ b/make/WIX.patches.in
@@ -20,6 +20,7 @@
 
   <CPackWiXFragment Id="#PRODUCTFEATURE">
         <ComponentRef Id="CM_SHORTCUT_EXTRA"/>
+        <ComponentRef Id="CM_ADD_TO_PATH"/>
   </CPackWiXFragment>
 
 </CPackWiXPatch>
