i#94, i#1699: replace memalign(), pvalloc(), valloc() + malloc zone versions
Adds replacement implementations for memalign(), pvalloc(), valloc(),
malloc_zone_memalign(), and malloc_zone_valloc().  Adds tests for each of
these routines with overflows and underflows.  Also adds pattern and
-no_delay_frees versions of the memalign test.

Review-URL: https://codereview.appspot.com/266770043

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -756,7 +756,8 @@ if (TOOL_DR_MEMORY)
 
   if (UNIX)
     newtest(memalign memalign.c)
-    newtest_nobuild(memalign-nodelay memalign "" "-delay_frees;0" "" OFF "")
+    newtest_nobuild(memalign.nodelay memalign "" "-delay_frees;0" "" OFF "memalign")
+    newtest_nobuild(memalign.pattern memalign "" "-light" "" OFF "")
   endif (UNIX)
 
   # persistent cache tests: currently only light mode is supported
