i#1790: move tests to a new long test suite
Creates a new long test suite and moves release-build and drheapstat tests
from the pre-commit suite to the long suite.  Automated bots are expected
to run the long suite.

Adds a nightly.cmake template file for setting up new automated test
machines.

Fixes #1790

Review-URL: https://codereview.appspot.com/272780043

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,6 +23,11 @@ cmake_minimum_required(VERSION 2.6)
 
 include(${PROJECT_SOURCE_DIR}/make/policies.cmake NO_POLICY_SCOPE)
 
+# Passing long to runsuite auto-enables release build tests.
+# It also sets this option, which we can use for test configurations
+# that we do not want to fill pre-commit time with.
+option(TEST_LONG "run long set of tests")
+
 # Restore global flags after all configure_DynamoRIO_client() calls.
 foreach (config "" ${CMAKE_BUILD_TYPE} ${CMAKE_CONFIGURATION_TYPES})
   if ("${config}" STREQUAL "")
